<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_line"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"/>

    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/searchbar_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tag"/>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/searchbar_hint"
        app:layout_anchor="@id/searchBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <TextView
        android:id="@+id/tvRecommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rekomendasi_kelas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecommend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvRecommend"
        tools:listitem="@layout/item_rekomendasi" />

</androidx.constraintlayout.widget.ConstraintLayout>
