<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailKursusActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:src="@drawable/baseline_arrow_back_black_ios_24" />

            <TextView
                android:id="@+id/bar_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_Detail_kursus"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_Pic"
        android:layout_width="match_parent"
        android:layout_height="263dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_insert_photo" />

    <TextView
        android:id="@+id/tv_Name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="8dp"
        android:text="@string/title_kursus_name"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_Desc"
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:gravity="left"
        android:padding="8dp"
        android:text="@string/Description_class"
        android:textSize="14sp" />

</LinearLayout>